--- a/index.html
+++ b/index.html
@@ -748,16 +748,16 @@ for (var attr in meta) {
 
   <body class="gradient animate--hover-default"><div class="contact page-width page-width--narrow section-sections--17401549652126__custom_liquid_AXQezC-padding"><h2 class="visually-hidden">Contact form</h2><form method="post" action="/contact#ContactForm" id="ContactForm" accept-charset="UTF-8" class="isolate scroll-trigger animate--slide-in"><input type="hidden" name="form_type" value="contact"><input type="hidden" name="utf8" value="✓"><div class="contact__fields">
         <div class="field">
-          <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[Name]" value="" placeholder="Name">
+          <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[Name]" value="PLACEHOLDER_NAME" placeholder="Name">
           <label class="field__label" for="ContactForm-name">Name</label>
         </div>
         <div class="field field--with-error">
-          <input autocomplete="email" type="email" id="ContactForm-email" class="field__input" name="contact[email]" spellcheck="false" autocapitalize="off" value="" aria-required="true" placeholder="Email">
+          <input autocomplete="email" type="email" id="ContactForm-email" class="field__input" name="contact[email]" spellcheck="false" autocapitalize="off" value="PLACEHOLDER_EMAIL" aria-required="true" placeholder="Email">
           <label class="field__label" for="ContactForm-email">Email
             <span aria-hidden="true">*</span></label></div>
       </div>
       <div class="field">
-        <textarea rows="10" id="ContactForm-body" class="text-area field__input" name="contact[Comment]" placeholder="Comment"></textarea>
+        <textarea rows="10" id="ContactForm-body" class="text-area field__input" name="contact[Comment]" placeholder="Comment">PLACEHOLDER_COMMENT</textarea>
         <label class="form__label field__label" for="ContactForm-body">Comment</label>
       </div>
       <div class="contact__button">
